fixed spacing issue term pages

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -7,7 +7,7 @@
 
 .select-clientele-logo-section .default-content-wrapper {
   opacity: 1;
-  padding-top: 80px;
+  /* padding-top: 80px; */
   margin-bottom: 0;
   padding-bottom: 4px;
 }
@@ -641,4 +641,12 @@ main .online-order-logo-section .new-image-set ul li a{
   .columns > div > div:nth-child(1) {
     border:none;
   }
+
+  .select-clientele-logo-section .default-content-wrapper {
+    opacity: 1;
+    padding-top: 80px;
+    margin-bottom: 0;
+    padding-bottom: 4px;
+  }
+  
 }
